Fixed table overflow issue

--- a/app_main/static/app_main/read_file_styles.css
+++ b/app_main/static/app_main/read_file_styles.css
@@ -8,12 +8,6 @@
 
 }
 
-button .after-preview-button{
-    display: inline-block;
-    margin-left: 10px;
-    margin-right: 10px;
-}
-
 .after-preview-header {
     left: 50%;
     transform: translate(-50%);
